--- a/templates/partials/about.hbs
+++ b/templates/partials/about.hbs
@@ -1,11 +1,11 @@
 <div class="container-fluid mt-5 about-style" id="aboutid">
     <div class="row">
         <div class="col-md-10 col-12 mx-auto">
-            <h1 class="text-center main-heading">About Us</h1>
+            <h1 class="text-center main-heading">About Me</h1>
             <div class="row">
                 <div class="col-md-6 col-12 hero-text ">
                     <figure>
-                        <img src="images/about.svg" alt="herosection_image">
+                        <img src="images/about.jpg" alt="herosection_image" width="300px" height="400px" style="border:2px solid black">
                     </figure>
                 </div>
 
