--- a/templates/partials/service.hbs
+++ b/templates/partials/service.hbs
@@ -1,7 +1,7 @@
 <div class="containee-fluid mt-5 service-style" id="serviceid">
     <div class="row">
         <div class="col-md-10  col-12 mx-auto">
-            <h1 class="text-center main-heading">Our Services </h1>
+            <h1 class="text-center main-heading">My Services </h1>
 
             <div class="row">
                 <div class="col-md-4">
