--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>WebTech</title>
+    <link rel="shortcut icon" href="images/logo.jpg" type="image/jpg">
 </head>
 
 <body>
